# precis-summary

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
src/precis_summary/: __init__.py  rake.py  ranking.py
tests/: test_rake.py  test_ranking.py
