[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precis-summary"
version = "0.2.1"
description = "Fast extractive summarization via RAKE keyword extraction"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["rake", "keyword-extraction", "summarization", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/retospect/precis-summary"
Repository = "https://github.com/retospect/precis-summary"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/precis_summary"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
